src/app/components/Navbar/Navbar.module.css
.navbar {
  left: 0;
  background-color: #e3e3cb; /*  556b2f  ///// */
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
  z-index: 20;
  width: 100%;
  line-height: 1.5rem;
  height: auto;
  flex-wrap: nowrap;
  padding-right: 0.7rem;
}
.navbar a:hover {
  text-decoration: wavy;
  transform: scale(1.03); /* Slightly enlarge on hover for effect */
  transition: background-color 0.3s ease, transform 0.3s ease;
  background-color: #c5c5af; /* rgba(255, 255, 255, 0.1) /////// */
}

.logoSection {
  cursor: default;
  margin: 0;
}
.logoSection img {
  cursor: pointer; /* Pointer cursor on hover over the image */
}
.navbarLinks {
  display: flex;
  justify-content: flex-end;
  gap: 0.4rem;
  flex-wrap: nowrap;
}
@media (min-width: 1440px) {
  .logoSection {
    margin-right: 6rem; /* Large margin for big desktops */
    margin-left: 1rem;
  }
  .navbarLinks {
    display: flex; /* Ensure this is flex to apply gap */
    flex-direction: row; /* Align links horizontally */
    gap: 4rem;
    margin: 0 0.5rem; /* Adds rem margin to the left and right of the navbar */
  }
}

@media (max-width: 768px) {
  .navbarLinks {
    flex-direction: column; /* Stack vertically on small screens */
    align-items: flex-end; /* Adjust alignment */
    position: relative; /* Ensure that links stay within their container */
    padding-top: 4rem;
    padding: 0.5rem;
  }
  .navbar {
    display: flex;
    flex-direction: row;
    padding: 0.5rem; /* Adjust padding for mobile */
    justify-content: space-between;
    width: 100%;
    flex-wrap: wrap;
  }
  .mobile-link {
    position: relative;
    z-index: 50;
  }
  .logoSection {
    position: relative;
    top: 0;
    left: 0;
    z-index: 21;
    width: auto; /* Avoid it growing too large */
    padding: 1rem 0;
  }
  .hamburger-container {
    display: block;
    position: absolute;
    top: 1rem;
    right: 1rem; /* Position it at the top-right */
    font-size: 1.5rem;
    color: white;
    z-index: 22;
  }
}

.navLink {
  margin-top: 0;
  font-weight: bolder;
  padding: 0 0 0.125rem 0;
  border-radius: 0.25rem;
  transition: color 0.3s ease, transform 0.2s ease;
  text-align: start;
  color: rgba(
    28,
    61,
    90,
    0.8
  ); /* #356335; */ /* ffffff   556b2f 333333  2e4d2e  /////// */
  font-size: 1rem;
  display: block;
  white-space: nowrap;
  /* Prevent shrinking */
  flex-shrink: 0;
}

.navLink:active {
  outline: 0.125rem solid #2e4d2e;
  outline-offset: 0.125rem;
  transform: scale(0.98);
}

.tooltipBox {
  position: fixed;
  background-color: white;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
  color: /* #556b2f; */ #2e4d2e;
  padding: 0.5rem;
  font-weight: bold;
  border-radius: 0.25rem;
  max-width: 250px;
  font-size: 0.9rem;
  z-index: 20;
  transition: background-color 0.3s ease; /* Smooth transition for hover effect */
}

